--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,8 +14,8 @@ Lilás: #5f2c82
   box-sizing: border-box;
 }
 
-body,
-html {
+
+html, body {
   background-color: #5f2c82;
   height: 100vh;
   width: 100vw;
