--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,8 +14,8 @@ Lilás: #5f2c82
   box-sizing: border-box;
 }
 
-
-html, body {
+html,
+body {
   background-color: #5f2c82;
   height: 100vh;
   width: 100vw;
@@ -55,4 +55,13 @@ section#login > div#imagem {
 section#login > div#formulario {
   display: block;
   padding: 10px;
+}
+
+div#formulario > h1 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+div#formulario > p {
+  font-size: 0.8em;
 }
