--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -10,12 +10,14 @@ Grandes Telas: acima de 1200px
 */
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
+  /* CONFIGURAÇÃO PARA TABLETS */
   body {
     background-image: linear-gradient(to top, #49a09d, #5f2c82);
   }
 
   section#login {
     width: 80vw;
+    height: 280px;
   }
   section#login > div#imagem {
     float: left;
@@ -30,12 +32,14 @@ Grandes Telas: acima de 1200px
 }
 
 @media screen and (min-width: 992px) {
+  /* CONFIGURAÇÃO PARA DESKTOP */
   body {
     background-image: linear-gradient(to top, #49a09d, #5f2c82);
   }
 
   section#login {
     width: 950px;
+    height: 350px;
   }
 
   section#login > div#imagem {
@@ -54,6 +58,7 @@ Grandes Telas: acima de 1200px
   }
 
   div#formulario > p {
-    font-size: 1.2em;
+    font-size: 1em;
+    margin: 20px 0px;
   }
 }
