--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,7 +31,6 @@ section#login {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   overflow: hidden;
 
   background-color: white;
@@ -40,6 +39,7 @@ section#login {
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
 
+  transform: translate(-50%, -50%);
   transition: width 0.3s, height 0.3s;
   transition-timing-function: ease;
 }
@@ -68,15 +68,39 @@ div#formulario > p {
 
 form > div.campo {
   background-color: #5f2c82;
+  border: 2px solid #5f2c82;
   width: 100%;
   display: block;
   height: 40px;
-  border-radius: 5px;
+  border-radius: 8px;
   margin: 5px 0px;
 }
 
 div.campo > label {
   display: none;
+}
+
+div.campo > span {
+  color: white;
+  font-size: 2em;
+  width: 40px;
+  padding: 5px;
+}
+
+div.campo > input {
+  background-color: #94cfcd;
+  font-size: 1em;
+  width: calc(100% - 44.1px);
+  height: 100%;
+  border: 0px;
+  border-radius: 8px;
+  padding: 4px;
+  transform: translateY(-12px);
+}
+
+div.campo > input:focus-within {
+  background-color: white;
+  border: none;
 }
 
 form > input[type="submit"] {
